--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="row no-gutters" data-aos="zoom-in-right" data-aos-duration="1000">
                 <div class="col-lg-6 text-white showcase-img" style="background-image: url(&quot;assets/img/HOW%20SPREAD.png&quot;);background-repeat: no-repeat;background-size: contain;background-color: #f7cb5d;background-position: 40%;"><span></span></div>
                 <div class="col-lg-6 my-auto order-lg-1 showcase-text">
-                    <h2>Transmission</h2>
+                    <h2>TRANSMISSION</h2>
                     <p class="lead mb-0">This occurs mainly when people are in close contact (two metres or six feet) via small droplets produced during coughing, sneezing, or talking. Contaminated droplets exhaled by infected people are then inhaled into the lungs, or settle
                         on other people's faces to cause new infection. The droplets are relatively heavy, usually fall to surfaces, and do not travel far through the air.</p>
                 </div>
