--- a/social_distancing.html
+++ b/social_distancing.html
@@ -17,9 +17,9 @@
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="dos_donts.html">Do's &amp; Donts</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="dos_donts.html">Do's &amp; Donts</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="preventive_measures.html">Preventive Measures</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="social_distancing.html">Social Distancing</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="social_distancing.html">Social Distancing</a></li>
                 </ul>
             </div>
         </div>
